# promptHub

./: .gitignore  Cargo.toml  README.md  README.zh.md  railway.json
.github/workflows/: ci.yml  release.yml
examples/docx/: Promptfile
examples/frontend-design/: Promptfile
examples/pptx/: Promptfile
layers/base/analyst/: layer.yaml
layers/base/translator/: prompt.md
layers/base/writer/: layer.yaml
layers/guard/fact-check/: layer.yaml
layers/guard/no-secrets/: prompt.md
layers/lang/chinese-markdown/: layer.yaml  prompt.md
layers/lang/english-academic/: prompt.md
layers/lang/structured-output/: prompt.md
layers/office-quality/: layer.yaml
layers/office-toolkit/: layer.yaml
layers/style/academic/: layer.yaml  prompt.md
layers/style/concise/: layer.yaml  prompt.md
layers/style/verbose/: prompt.md
prompthub/: Cargo.toml
prompthub/examples/xlsx/: Promptfile
prompthub/layers/anti-slop/: layer.yaml  prompt.md
prompthub/layers/base/analyst/: prompt.md
prompthub/layers/base/code-reviewer/: layer.yaml  prompt.md
prompthub/layers/base/frontend-builder/: layer.yaml  prompt.md
prompthub/layers/base/office-doc/: layer.yaml  prompt.md
prompthub/layers/base/translator/: layer.yaml
prompthub/layers/base/writer/: prompt.md
prompthub/layers/guard/fact-check/: prompt.md
prompthub/layers/guard/no-secrets/: layer.yaml
prompthub/layers/guard/safe-output/: layer.yaml  prompt.md
prompthub/layers/lang/english-academic/: layer.yaml
prompthub/layers/lang/structured-output/: layer.yaml
prompthub/layers/office-quality/: prompt.md
prompthub/layers/office-toolkit/: prompt.md
prompthub/layers/style/verbose/: layer.yaml
prompthub/scripts/: iterate.md
prompthub/src/: cli.rs  config.rs  error.rs  export.rs  layer.rs  lib.rs  main.rs  merger.rs  output.rs  parser.rs  pull.rs  push.rs  resolver.rs  similarity.rs
prompthub/tests/: integration.rs
registry/: Cargo.toml  Dockerfile  docker-compose.yaml  entrypoint.sh  registry.demo.yaml  registry.example.yaml  render.yaml  seed.sh
registry/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  storage.rs  ui.html
registry/src/routes/: auth_routes.rs  layer_routes.rs  mod.rs  ui_routes.rs
registry/tests/: integration.rs
src/: cli.rs  config.rs  error.rs  layer.rs  main.rs  mcp_server.rs  merger.rs  output.rs  parser.rs  pull.rs  renderer.rs  resolver.rs
tests/: integration.rs
