[package]
name = "prompthub"
version = "0.1.0"
edition = "2021"
description = "A layered prompt management system inspired by Docker"
license = "MIT"
homepage = "https://github.com/soolaugust/promptHub"
repository = "https://github.com/soolaugust/promptHub"
keywords = ["prompt", "ai", "llm", "cli", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ph"
path = "src/main.rs"

[[bin]]
name = "ph-mcp"
path = "src/mcp_server.rs"

[lib]
name = "prompthub"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
glob = "0.3"
semver = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
regex = "1"
colored = "2"
rpassword = "7"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
# MCP server dependencies
rmcp = { version = "1.2", features = ["server", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
schemars = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unused_imports = "warn"
unused_variables = "warn"

[lints.clippy]
unwrap_used = "allow"
