[package]
name = "ph-registry"
version = "0.1.0"
edition = "2021"
description = "Self-hosted PromptHub layer registry"
license = "MIT"

[lib]
name = "ph_registry"
path = "src/lib.rs"

[[bin]]
name = "ph-registry"
path = "src/main.rs"

[dependencies]
prompthub = { path = "../prompthub" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
axum-test = "14"
